@@ -34,6 +34,28 @@ import|;
 end_import
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Comparator
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|ArrayUtil
+import|;
+end_import
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -83,6 +105,48 @@ name|MultiTermsEnum
 extends|extends
 name|TermsEnum
 block|{
+DECL|field|INDEX_COMPARATOR
+specifier|private
+specifier|static
+specifier|final
+name|Comparator
+argument_list|<
+name|TermsEnumWithSlice
+argument_list|>
+name|INDEX_COMPARATOR
+init|=
+operator|new
+name|Comparator
+argument_list|<
+name|TermsEnumWithSlice
+argument_list|>
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|int
+name|compare
+parameter_list|(
+name|TermsEnumWithSlice
+name|o1
+parameter_list|,
+name|TermsEnumWithSlice
+name|o2
+parameter_list|)
+block|{
+return|return
+name|o1
+operator|.
+name|index
+operator|-
+name|o2
+operator|.
+name|index
+return|;
+block|}
+block|}
+decl_stmt|;
 DECL|field|queue
 specifier|private
 specifier|final
@@ -994,6 +1058,16 @@ operator|.
 name|term
 argument_list|()
 expr_stmt|;
+name|queue
+operator|.
+name|add
+argument_list|(
+name|currentSubs
+index|[
+name|i
+index|]
+argument_list|)
+expr_stmt|;
 block|}
 else|else
 block|{
@@ -1046,6 +1120,13 @@ expr_stmt|;
 block|}
 else|else
 block|{
+assert|assert
+name|status
+operator|==
+name|SeekStatus
+operator|.
+name|END
+assert|;
 comment|// enum exhausted
 name|currentSubs
 index|[
@@ -1149,55 +1230,15 @@ name|numTop
 operator|==
 literal|0
 assert|;
-while|while
-condition|(
-literal|true
-condition|)
-block|{
-name|top
-index|[
 name|numTop
-operator|++
-index|]
 operator|=
 name|queue
 operator|.
-name|pop
-argument_list|()
-expr_stmt|;
-if|if
-condition|(
-name|queue
-operator|.
-name|size
-argument_list|()
-operator|==
-literal|0
-operator|||
-operator|!
-operator|(
-name|queue
-operator|.
-name|top
-argument_list|()
-operator|)
-operator|.
-name|current
-operator|.
-name|bytesEquals
+name|fillTop
 argument_list|(
 name|top
-index|[
-literal|0
-index|]
-operator|.
-name|current
 argument_list|)
-condition|)
-block|{
-break|break;
-block|}
-block|}
+expr_stmt|;
 name|current
 operator|=
 name|top
@@ -1216,7 +1257,7 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
-comment|// call next() on each top, and put back into queue
+comment|// call next() on each top, and reorder queue
 for|for
 control|(
 name|int
@@ -1232,17 +1273,19 @@ name|i
 operator|++
 control|)
 block|{
+name|TermsEnumWithSlice
 name|top
-index|[
-name|i
-index|]
+init|=
+name|queue
+operator|.
+name|top
+argument_list|()
+decl_stmt|;
+name|top
 operator|.
 name|current
 operator|=
 name|top
-index|[
-name|i
-index|]
 operator|.
 name|terms
 operator|.
@@ -1252,29 +1295,25 @@ expr_stmt|;
 if|if
 condition|(
 name|top
-index|[
-name|i
-index|]
 operator|.
 name|current
-operator|!=
+operator|==
 literal|null
 condition|)
 block|{
 name|queue
 operator|.
-name|add
-argument_list|(
-name|top
-index|[
-name|i
-index|]
-argument_list|)
+name|pop
+argument_list|()
 expr_stmt|;
 block|}
 else|else
 block|{
-comment|// no more fields in this reader
+name|queue
+operator|.
+name|updateTop
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 name|numTop
@@ -1554,6 +1593,19 @@ name|upto
 init|=
 literal|0
 decl_stmt|;
+name|ArrayUtil
+operator|.
+name|timSort
+argument_list|(
+name|top
+argument_list|,
+literal|0
+argument_list|,
+name|numTop
+argument_list|,
+name|INDEX_COMPARATOR
+argument_list|)
+expr_stmt|;
 for|for
 control|(
 name|int
@@ -1798,6 +1850,12 @@ argument_list|<
 name|TermsEnumWithSlice
 argument_list|>
 block|{
+DECL|field|stack
+specifier|final
+name|int
+index|[]
+name|stack
+decl_stmt|;
 DECL|method|TermMergeQueue
 name|TermMergeQueue
 parameter_list|(
@@ -1809,6 +1867,16 @@ name|super
 argument_list|(
 name|size
 argument_list|)
+expr_stmt|;
+name|this
+operator|.
+name|stack
+operator|=
+operator|new
+name|int
+index|[
+name|size
+index|]
 expr_stmt|;
 block|}
 annotation|@
@@ -1825,10 +1893,7 @@ name|TermsEnumWithSlice
 name|termsB
 parameter_list|)
 block|{
-specifier|final
-name|int
-name|cmp
-init|=
+return|return
 name|termsA
 operator|.
 name|current
@@ -1839,36 +1904,183 @@ name|termsB
 operator|.
 name|current
 argument_list|)
+operator|<
+literal|0
+return|;
+block|}
+comment|/** Add the {@link #top()} slice as well as all slices that are positionned      *  on the same term to {@code tops} and return how many of them there are. */
+DECL|method|fillTop
+name|int
+name|fillTop
+parameter_list|(
+name|TermsEnumWithSlice
+index|[]
+name|tops
+parameter_list|)
+block|{
+specifier|final
+name|int
+name|size
+init|=
+name|size
+argument_list|()
 decl_stmt|;
 if|if
 condition|(
-name|cmp
-operator|!=
+name|size
+operator|==
 literal|0
 condition|)
 block|{
 return|return
-name|cmp
-operator|<
 literal|0
 return|;
 block|}
-else|else
+name|tops
+index|[
+literal|0
+index|]
+operator|=
+name|top
+argument_list|()
+expr_stmt|;
+name|int
+name|numTop
+init|=
+literal|1
+decl_stmt|;
+name|stack
+index|[
+literal|0
+index|]
+operator|=
+literal|1
+expr_stmt|;
+name|int
+name|stackLen
+init|=
+literal|1
+decl_stmt|;
+while|while
+condition|(
+name|stackLen
+operator|!=
+literal|0
+condition|)
 block|{
+specifier|final
+name|int
+name|index
+init|=
+name|stack
+index|[
+operator|--
+name|stackLen
+index|]
+decl_stmt|;
+specifier|final
+name|int
+name|leftChild
+init|=
+name|index
+operator|<<
+literal|1
+decl_stmt|;
+for|for
+control|(
+name|int
+name|child
+init|=
+name|leftChild
+init|,
+name|end
+init|=
+name|Math
+operator|.
+name|min
+argument_list|(
+name|size
+argument_list|,
+name|leftChild
+operator|+
+literal|1
+argument_list|)
+init|;
+name|child
+operator|<=
+name|end
+condition|;
+operator|++
+name|child
+control|)
+block|{
+name|TermsEnumWithSlice
+name|te
+init|=
+name|get
+argument_list|(
+name|child
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|te
+operator|.
+name|current
+operator|.
+name|equals
+argument_list|(
+name|tops
+index|[
+literal|0
+index|]
+operator|.
+name|current
+argument_list|)
+condition|)
+block|{
+name|tops
+index|[
+name|numTop
+operator|++
+index|]
+operator|=
+name|te
+expr_stmt|;
+name|stack
+index|[
+name|stackLen
+operator|++
+index|]
+operator|=
+name|child
+expr_stmt|;
+block|}
+block|}
+block|}
 return|return
-name|termsA
-operator|.
-name|subSlice
-operator|.
-name|start
-operator|<
-name|termsB
-operator|.
-name|subSlice
-operator|.
-name|start
+name|numTop
 return|;
 block|}
+DECL|method|get
+specifier|private
+name|TermsEnumWithSlice
+name|get
+parameter_list|(
+name|int
+name|i
+parameter_list|)
+block|{
+return|return
+operator|(
+name|TermsEnumWithSlice
+operator|)
+name|getHeapArray
+argument_list|()
+index|[
+name|i
+index|]
+return|;
 block|}
 block|}
 annotation|@
